2008-12-08  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el (ucm-actb-checkin-command, ucm-checkin-activity): fix
	log-edit call

2008-12-05  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (vc-clearcase-state-heuristic): fetch the
	clearcase comment and activity here instead of
	`vc-cleacase-state'.  It seems `vc-clearcase-state' is never
	called...
	(vc-clearcase-state-heuristic): 406 'needs-patch state was renamed
	to 'needs-update
	(clearcase-maybe-set-vc-state): fetch the clearcase comment and
	activity here instead of `vc-clearcase-state-heuristic'.

	* ucm.el (ucm-read-activity): BUGFIX: use `cond' instead of `case'
	(ucm-actb-checkin-command, ucm-checkin-activity ): update
	`log-edit' call for Emacs23

2008-12-03  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-read-view-tag, clearcase-read-label):
	use `test-completion'
	(clearcase-find-version-helper): 403 remove dest file if it exists

	* ucm.el (ucm-actb-show-diff): 401 `vc-clearcase-diff' requires a
	list of files as an argument
	(ucm-read-activity): fix completion predicate for Emacs23

2008-11-10  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* vc-clearcase.el (clearcase-diff-with-diff): use relative file
	names and call the `diff-command' directly so we can format its
	labels
	(clearcase-diff-with-cleartool): use relative filenames in the
	diff.

2008-09-17  Alexandru Harsanyi  <haral@users.sourceforge.net>

	* ucm.el: 379 version was renamed to revision in the entire file.
	(ucm-show-diff-link-handler): call `ucm-actb-show-diff'
	(ucm-actb-file-optimize-revisions): new function
	(ucm-actb-revision): new slot: previous^
	(ucm-actb-revision-previous): new function
	(ucm-actb-show-diff): new function
	(ucm-actb-optimize-display-command): new function
	(ucm-actb-revision): new slot: COUNT
	(ucm-actb-revision-pp): display the number of revisions if more
	than 1.
	(ucm-actb-file-optimize-revisions): update the COUNT slot of each